apps/traefik/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.bisnaguete.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik.bisnaguete.xyz
      secretName: traefik-dashboard-tls
